Align fix

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_navbar_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_navbar_default.less
@@ -84,7 +84,7 @@
   .gn-logo-link {
     padding: 10px 15px;
     .gn-logo {
-      margin-top: -12px;
+      margin-top: -3px;
     }
     .gn-name {
       margin-top: 5px;
